wip: remove scheduling login on firmware and move into backend responsibility for flexibility
